# strata

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .publicignore  .strata.example  AGENTS.md  CLAUDE.md  GOVERNANCE.md  LICENSE  Makefile  README.md  gemini-orchestrator-prompt.md  intent.md  mcp_config.example.json  pyproject.toml
.cursor/: mcp.json
.github/: README.md
.github/workflows/: public-release-audit.yml  release.yml  strata-ci.yml  strata-pr.yml  strata-weekly.yml  sync-public.yml
conductor/: AGENTS.md  CONDUCTOR_MODES.md  README.md  benchmark-matrix.md  gemini-orchestrator-plan.md  handoff-archive.md  handoff-log.md  index.md  master-plan-enhancement.md  master-plan-productionization.md  master-plan-strata-core.md  revert-spec.md  slice-01-benchmark-strata-with-gemma-4.md  slice-01-ir-extractor.md  slice-02-impact-analysis-drop-int-inventory-risk.md  slice-03-decouple-conductor-ci-into-soft-gated-pr-comment.md  slice-04-refactor-brick-metaphor-to-phase.md  slice-05-build-conductor-management-skill.md  slice-06-add-conductor-cli-tests.md  slice-06-l1-adapter-contract-replay.md  slice-06-live-looker-l1.md  slice-06-public-release-flow.md  slice-07-live-looker-l1.md  slice-21-author-attribution.md  slice-vscode-a-scaffold-cli-bridge.md  slice-vscode-b-governance-diagnostics.md  slice-vscode-c-packaging.md  tracks.md
conductor/archive/: slice-01-ir-extractor.md  slice-02-usage-enrichment.md  slice-03-synthesis.md  slice-04-ci-suite.md  slice-05-mcp-repobrain.md  slice-07-live-looker-l1.md  slice-08-schema-drift-offline.md  slice-09-validation-scope-offline.md  slice-10-agnostic-store.md
conductor/templates/: CONDUCTOR_SLICE_TEMPLATE.md  CONDUCTOR_STARTER_PROMPT_TEMPLATE.md  SKILL_TEMPLATE.md
docs/: CONTRIBUTING.md  GOVERNANCE.md  README.md  cli-guide.md  enterprise-deployment.md  gemini-flash-test-report.md  looker-ecosystem.md  notifications-setup.md  offline-first-walkthrough.md  playground-guide.md  public-release.md  runbook.md  security-hardening.md  security-review.md  strata-ecosystem-report.md  testing-findings.md  testing-scenarios.md  testing.md
docs/benchmarks/: gemma4_spec.md
scripts/: README.md  benchmark_scenarios.py  build_ir.py  check_public_release.py  check_replay.py  check_strata.py  generate_outputs.py  generate_schema_facts.py  import_usage.py  mcp_server.sh  notify.py  pr_comment.py  render_chart.py  serve_dashboard.py  strata_auth.py  test_mcp_live.py  validate.py
skills/: strata_agentic_runbook.md  strata_schema_refresh.md  strata_workflow.md
skills/governance/: strata_agentic_runbook.md  (+2 more)
tests/: README.md  test_check_public_release.py  test_cli.py  test_docs_consistency.py  test_ir_parser.py  test_ir_resolver.py  test_l1_providers.py  test_l1_synthesis_outputs.py  test_looker_provider.py  test_mcp_tools.py  test_notifications.py  test_scaffold.py  test_schema_drift.py  test_schema_refresh.py  test_security.py  test_validation_scope.py
vscode-ext/: .eslintrc.json  .vscodeignore  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
(+183 files in other folders)
