[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata"
version = "0.1.0"
requires-python = ">=3.11"
description = "Deterministic LookML dependency mapping, dead-code detection, and PDT cost analysis"
license = {text = "Apache-2.0"}
authors = [{name = "Garrett Schumacher", email = "me@garrettschumacher.com"}]
dependencies = [
  "networkx>=3.0",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.envs.default]
python = "3.11"
