[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strata"
version = "0.1.0"
requires-python = ">=3.11"
description = "Deterministic LookML dependency mapping, dead-code detection, and PDT cost analysis"
license = {text = "Apache-2.0"}
authors = [{name = "Garrett Schumacher", email = "me@garrettschumacher.com"}]
dependencies = [
  "networkx>=3.0",
  "mcp>=1.0",
  "click>=8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov",
]
viz = [
  "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strata"]
include = ["src/strata/skills/**", "src/strata/viz/charts/**", "src/strata/bootstrap/templates/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.scripts]
strata       = "strata.cli.main:strata_cli"
strata-mcp   = "strata.mcp.server:main"
strata-chart = "strata.viz.render:main"

[tool.hatch.envs.default]
python = "3.11"
